--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,14 +17,14 @@
     - package
   package:
     name: libnss-resolve
-  when: "'dns' not in group_names"
+  when: 'dns' not in group_names
 
 - name: systemd-resolved | nsswitch.conf
   replace:
     path: /etc/nsswitch.conf
     regexp: 'resolve (\[.*\])?'
     replace: ""
-  when: "'dns' in group_names"
+  when: 'dns' in group_names
 
 - name: systemd-resolved | config
   tags:
