--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,4 +1,10 @@
 ---
+
+- name: use resolved
+  template:
+    src: resolv.conf.j2
+    dest: /etc/resolv.conf
+
 - name: restart resolved
   tags:
   - service
