set /etc/resolv.conf in task, not just handler

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -58,3 +58,9 @@
     state: started
     enabled: yes
   notify: use resolved
+
+- name: systemd-resolved | enable in /etc/resolv.conf
+  template:
+    src: resolv.conf.j2
+    dest: /etc/resolv.conf
+
