--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -70,8 +70,12 @@
     state: started
   notify: use resolved
 
-- name: systemd-resolved | enable in /etc/resolv.conf
-  template:
-    src: resolv.conf.j2
+- name: systemd-resolved | stub /etc/resolv.conf
+  tags:
+  - resolv
+  file:
+    src: /run/systemd/resolve/stub-resolv.conf
     dest: /etc/resolv.conf
+    state: link
+    force: true
 
